Made configurations and documentation match the new component names.